--- a/css file/leon.css
+++ b/css file/leon.css
@@ -13,6 +13,9 @@
     --fourth-color:#f6f6f6;
 
 }
+html{
+    scroll-behavior:smooth;
+}
 /* start nav  */
 .nav .container{
     display: flex;
@@ -46,7 +49,6 @@
     width: 200px;
     margin-top: 20px;
     background-color: #2c4755;
-    color: aliceblue;
     position: absolute;
     top: 0;
     right: 0;
@@ -69,6 +71,11 @@
     list-style: none;
     width: fit-content;
     z-index: 1;
+}
+.nav .container .menu .links ul li a{
+    text-decoration: none;
+    color: white;
+
 }
 /* end nav  */
 /* start header */
